# EyeCandy3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DEPENDENCIES  EyeCandy3D.sln  LICENSE  README.md
Example/: CMakeLists.txt  Example.vcxproj  Example.vcxproj.filters  packages.config
Example/Resources/Shaders/: basic.frag  text.frag  text.vert
Example/src/: ExampleGui.cpp  ExampleGui.h  ExampleScene.cpp  ExampleScene.h  ExampleWindow.cpp  ExampleWindow.h  main.cpp
EyeCandy3D/: CMakeLists.txt  EyeCandy3D.vcxproj  EyeCandy3D.vcxproj.filters
EyeCandy3D/include/EC3D/: Cursor.h  Node.h  ResourceType.h  Scene.h  SceneRenderer.h  SceneSystem.h  Transform3D.h
EyeCandy3D/include/EC3D/Common/: Common.h  Config.h  Config.h.in  EyeCandy3dInitializer.h  Logging.h
EyeCandy3D/include/EC3D/Core/: Application.h  Camera.h  CameraController.h  CameraType.h  CircleGeometry.h  Color.h  CubeGeometry.h  CubeMesh.h  Cursor.h  CylinderGeometry.h  DeviceRegistry.h  DirectionalLight.h  Drawable.h  DynamicGeometry.h  DynamicLineGeometry.h  EventQueue.h  EventSource.h  EventSystem.h  FontCharacter.h  FontTextureAtlas.h  Frame.h  FrameLayoutUniform.h  FrameSlot.h  Freetype.h  Geometry.h  GeometryData.h  GeometryRoot.h  IFrameLayout.h  IGeometryAccess.h  InputEvent.h  InputListener.h  InputObservable.h  Keyboard.h  Light.h  LightSystem.h  LightType.h  LineGeometry.h  LineGeometryFactory.h  LineStripGeometry.h  Material.h  (+30 more)
EyeCandy3D/include/EC3D/GUI/: Bounds2D.h  Button.h  Checkbox.h  GUI.h  GUIController.h  GUIFwd.h  GUIModel.h  GUIRenderer.h  GUIRoot.h  GUISystem.h  GuiPrimitive.h  GuiShaderInfoObject.h  HorizontalList.h  MiniAgui.h  RadioButton.h  Screen.h  Slot.h  SlotPair.h  Text.h  TextField.h  Theme.h  VerticalList.h  Widget.h  Window.h
EyeCandy3D/include/EC3D/Graphics/: Camera.h  CameraController.h  CameraType.h
EyeCandy3D/include/EC3D/Gui/: GuiPrimitiveRenderer.h  GuiRenderContext.h  GuiRenderer.h  GuiSystem.h  (+2 more)
EyeCandy3D/include/ec3/: Application.h  Cursor.h  Node.h  ResourceRegistry.h  ResourceType.h  Scene.h  SceneRenderer.h  SceneSystem.h  Transform3D.h
EyeCandy3D/src/: Application.cpp  CMakeLists.txt  Cursor.cpp  Frame.cpp  Node.cpp  Scene.cpp  SceneRenderer.cpp  SceneSystem.cpp  Transform3D.cpp
EyeCandy3D/src/Common/: Config.cpp  EyeCandy3dInitializer.cpp  Logging.cpp
EyeCandy3D/src/Core/: Application.cpp  CMakeLists.txt  Camera.cpp  CameraController.cpp  CircleGeometry.cpp  Color.cpp  CubeGeometry.cpp  CubeMesh.cpp  Cursor.cpp  CylinderGeometry.cpp  DeviceRegistry.cpp  DirectionalLight.cpp  Drawable.cpp  DynamicGeometry.cpp  DynamicLineGeometry.cpp  EventQueue.cpp  EventSource.cpp  EventSystem.cpp  FontTextureAtlas.cpp  Frame.cpp  FrameLayoutUniform.cpp  FrameSlot.cpp  Freetype.cpp  Geometry.cpp  GeometryData.cpp  GuiRenderer.cpp  IFrameLayout.cpp  IGeometryAccess.cpp  InputEvent.cpp  InputListener.cpp  InputObservable.cpp  Keyboard.cpp  Light.cpp  LightSystem.cpp  LineGeometry.cpp  LineGeometryFactory.cpp  LineStripGeometry.cpp  Material.cpp  Mouse.cpp  Node.cpp  (+23 more)
EyeCandy3D/src/GUI/: Bounds2D.cpp  Button.cpp  Checkbox.cpp  GUI.cpp  GUIController.cpp  GUIModel.cpp  GUIRenderer.cpp  GUISystem.cpp  GuiPrimitiveRenderer.cpp  HorizontalList.cpp  MiniAgui.cpp  RadioButton.cpp  Screen.cpp  Text.cpp  TextField.cpp  Theme.cpp  VerticalList.cpp  Widget.cpp  Window.cpp
EyeCandy3D/src/Graphics/: Camera.cpp  CameraController.cpp  Drawable.cpp
EyeCandy3D/src/Gui/: CMakeLists.txt  GUISystem.cpp  GuiPrimitiveRenderer.cpp  GuiRenderer.cpp  GuiSystem.cpp  MiniAgui.cpp
EyeCandy3D/src/Input/: DeviceRegistry.cpp  EventSystem.cpp  InputEvent.cpp  InputListener.cpp  InputObservable.cpp  Keyboard.cpp  Mouse.cpp  SceneController.cpp
EyeCandy3D/src/Plugin/: ImGuiPlugin.cpp  Plugin.cpp  PluginSystem.cpp
EyeCandy3D/src/Utilities/: CMakeLists.txt  FileLogger.cpp  FileSystem.cpp  Logger.cpp  Profiler.cpp  Random.cpp  SystemTime.cpp  Timer.cpp  UtilitiesFile.cpp
EyeCandy3D/src/Window/: Viewport.cpp  Window.cpp  WindowCallbacks.cpp  WindowCreationHints.cpp
EyeCandy3D/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_widgets.cpp
Samples/basic/: CMakeLists.txt  ExampleScene.cpp  ExampleScene.h  ExampleWindow.cpp  ExampleWindow.h  main.cpp
Samples/geometry/: CMakeLists.txt  main.cpp
Samples/sample_0815/: CMakeLists.txt  ExampleGui.cpp  ExampleGui.h  ExampleScene.cpp  ExampleWindow.cpp  main.cpp
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  packages.config
Test/include/: VectorApprox.h
Test/src/: UnitTestTest.cpp  main.cpp
Test/src/Common/: VectorApprox.cpp
Test/src/test/: ColorTest.cpp
lib/: CMakeLists.txt
lib/include/ec3/: Cursor.h  Frame.h  Scene.h  application.h  cursor.h  frame.h  node.h  resource-registry.h  resource-type.h  scene-renderer.h  scene-system.h  scene.h  transform-3d.h
lib/src/: Scene.cpp  SceneRenderer.cpp  SceneSystem.cpp  Transform3D.cpp  application.cpp  cursor.cpp  frame.cpp  node.cpp  scene-renderer.cpp  scene-system.cpp  scene.cpp  transform-3d.cpp
lib/src/Common/: EyeCandy3dInitializer.cpp  Logging.cpp
lib/src/Graphics/: Drawable.cpp
lib/src/Gui/: GuiPrimitiveRenderer.cpp  GuiSystem.cpp
lib/src/Input/: DeviceRegistry.cpp  EventSystem.cpp  InputEvent.cpp  InputObservable.cpp  Mouse.cpp  SceneController.cpp
lib/src/Window/: Window.cpp  WindowCallbacks.cpp
lib/src/common/: config.cpp  initializer.cpp  logging.cpp
lib/src/graphics/: camera-controller.cpp  camera.cpp  drawable.cpp
lib/src/gui/: gui-primitive-renderer.cpp  gui-renderer.cpp  gui-system.cpp  mini-agui.cpp
lib/src/input/: device-registry.cpp  event-system.cpp  input-event.cpp  input-listener.cpp  input-observable.cpp  keyboard.cpp  mouse.cpp  scene-controller.cpp
lib/src/utilities/: profiler.cpp  random.cpp  timer.cpp
lib/src/window/: viewport.cpp  window-callbacks.cpp  window-creation-hints.cpp  window.cpp
samples/basic/: CMakeLists.txt  example-scene.cpp  example-scene.h  example-window.cpp  example-window.h  main.cpp
tests/: CMakeLists.txt
tests/src/common/: test-config.cpp  vector-approx.cpp
(+6728 files in other folders)
